--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -1,34 +1,63 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+	<title>商家管理后台</title>
+	<link type="image/x-icon" href="{webroot:favicon.ico}" rel="icon">
+	<script type='text/javascript' src="static/js/jquery-1.12.4.min.js"></script>
+	<script type='text/javascript' src="static/js/form.js"></script>
+	<script type='text/javascript' src="static/js/artTemplate.js"></script>
+	<script type='text/javascript' src="static/js/validate.js"></script>
+	<script type='text/javascript' src="static/js/html5.js"></script>
+	<link rel="stylesheet" href="static/css/admin.css" type="text/css" media="screen" />
+	<script type='text/javascript' src="static/js/public.js"></script>
+</head>
+
 <body>
-<script src="static/js/jquery.min.js?v="></script>
-<script src="static/js/core/main.js?v="></script>
-<!-- <script src="static/js/core/public.js"></script> -->
+	<!--头部 开始-->
+	<header id="header">
+		<hgroup>
+			<h1 class="site_title"></h1>
+			<h2 class="section_title"></h2>
+			<div class="btn_view_site"><a href="{url:/systemseller/logout}">退出登录</a></div>
+		</hgroup>
+	</header>
+	<!--头部 结束-->
 
-<link rel="stylesheet" href="static/css/main.css">
-<link rel="stylesheet" href="static/css/border.css">
-<link rel="stylesheet" href="static/css/reset.css">
-
-<script>
-    $(document).ready(function(){
-        Main.common.init();
-    });
-</script>
-<div class="top-nav">
-	<?php echo $topNav;?>
-</div>
-	<div class='content'>
-		<div class="left-menu">
-			<?php echo $menu;?>
+	<!--面包屑导航 开始-->
+	<section id="secondary_bar">
+		<div class="user">
+			<p>admin</p>
 		</div>
+	</section>
+	<!--面包屑导航 结束-->
 
-		<div class="main">
-			<div class="main-crumbs">
-				<?php echo $main_crumbs;?>
-			</div>
-			<div class="main-content">
-				<?php echo $main_content;?>
-			</div>
-		</div>
+	<!--侧边栏菜单 开始-->
+	<aside id="sidebar" class="column">
+		
+		<h3>CMS管理模块</h3>
+		<ul class="toggle">
+			
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">品牌管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">机型管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">客户管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">库存管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">销售管理</a></li>
+			
+		</ul>
+		
 
-	</div>
+		<footer>
+			
+		</footer>
+	</aside>
+	<!--侧边栏菜单 结束-->
 
+	<!--主体内容 开始-->
+	<section id="main" class="column">
+		{$main_content ?? ''}
+	</section>
+	<!--主题内容 结束-->
 </body>
+</html>
