列表页，新增页

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -39,11 +39,12 @@
 		<h3>CMS管理模块</h3>
 		<ul class="toggle">
 			
-			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">品牌管理</a></li>
-			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">机型管理</a></li>
-			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">客户管理</a></li>
-			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">库存管理</a></li>
-			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href=''">销售管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href='?c=brand'">品牌管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href='?c=mobile'">机型管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href='?c=customer'">客户管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href='?c=integral'">积分管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href='?c=store'">库存管理</a></li>
+			<li class="icn_categories"><a href="javascript:void(0)" onclick="window.location.href='?c=sell'">销售管理</a></li>
 			
 		</ul>
 		
