--- a/application/index/view/index/add.html
+++ b/application/index/view/index/add.html
@@ -1,10 +1,10 @@
 <article class="module width_full">
 	<header>
-		<h3 class="tabs_involved">商品编辑</h3>
+		<h3 class="tabs_involved">{$add_title}</h3>
 
-		<!-- <ul class="tabs" name="menu1">
-			<li id="li_1" class="active"></li>
-		</ul> -->
+		<ul class="tabs" name="menu1">
+			<li id="li_1" class=""><span onclick="window.location.href='?c=brand'"><img src="static/images/main/icn_jump_back.png" title="返回" /></span></li>
+		</ul>
 	</header>
 
 	<form action="" name="goodsForm" method="post" novalidate="true">
@@ -15,75 +15,180 @@
 
 		<!--商品信息 开始-->
 		<div class="module_content" id="table_box_1">
+			<?php if($c === 'brand'){?>
+				<fieldset>
+					<label>品牌名称</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>状态</label>
+					<div class="box">
+						<input type='radio' name='is_del' value='3' checked="checked" />启用
+						<input type='radio' name='is_del' value='2' />停用
+					</div>
+				</fieldset>
+				<fieldset>
+					<label>排序</label>
+					<input name="sort" type="text" pattern="int" value="99" />
+				</fieldset>
+			<?php }?>
+			<?php if($c === 'mobile'){?>
+				<fieldset>
+					<label>机型名称</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>商品品牌</label>
+					<select name="brand_id">
+						<option value="0">请选择</option>
+						<option value="">vivo</option>
+						<option value="">oopo</option>
+						<option value="">金立</option>
+						<option value="">华为</option>
+						<option value="">小米</option>
+					</select>
+				</fieldset>
+				<fieldset>
+					<label>颜色</label>
+					<div class="box">
+						<input type="text" name="">
+						<button class="btn" onclick="addNewSpec();" type="button"><span class="add">+</span></button>
+					</div>
+				</fieldset>
+				<fieldset>
+					<label>内存</label>
+					<div class="box">
+						<input type="text" name="">
+						<button class="btn" onclick="addNewSpec();" type="button"><span class="add">+</span></button>
+					</div>
+				</fieldset>
+				<fieldset>
+					<label>排序</label>
+					<input name="sort" type="text" pattern="int" value="99" />
+				</fieldset>
+				<fieldset>
+					<label>状态</label>
+					<div class="box">
+						<input type='radio' name='is_del' value='3' checked="checked" />启用
+						<input type='radio' name='is_del' value='2' />停用
+					</div>
+				</fieldset>
+			<?php }?>
+			<?php if($c === 'customer'){?>
+				<fieldset>
+					<label>客户名称</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>手机号</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+			<?php }?>
+			<?php if($c === 'integral'){?>
+				<fieldset>
+					<label>积分分数</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>赠品名称</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>赠品成本</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>排序</label>
+					<input name="sort" type="text" pattern="int" value="99" />
+				</fieldset>
+				<fieldset>
+					<label>状态</label>
+					<div class="box">
+						<input type='radio' name='is_del' value='3' checked="checked" />启用
+						<input type='radio' name='is_del' value='2' />停用
+					</div>
+				</fieldset>
+			<?php }?>
+			<?php if($c === 'store'){?>
+				<fieldset>
+					<label>机型</label>
+					<select name="brand_id">
+						<option value="0">请选择</option>
+						<option value="">vivo</option>
+						<option value="">oopo</option>
+						<option value="">金立</option>
+						<option value="">华为</option>
+						<option value="">小米</option>
+					</select>
+				</fieldset>
+				<fieldset>
+					<label>颜色</label>
+					<select name="brand_id">
+						<option value="0">请选择</option>
+						<option value="">vivo</option>
+						<option value="">oopo</option>
+						<option value="">金立</option>
+						<option value="">华为</option>
+						<option value="">小米</option>
+					</select>
+				</fieldset>
+				<fieldset>
+					<label>内存</label>
+					<select name="brand_id">
+						<option value="0">请选择</option>
+						<option value="">vivo</option>
+						<option value="">oopo</option>
+						<option value="">金立</option>
+						<option value="">华为</option>
+						<option value="">小米</option>
+					</select>
+				</fieldset>
+				<fieldset>
+					<label>进货价格</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+				<fieldset>
+					<label>销售价格</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+			<?php }?>
+			<?php if($c === 'sell'){?>
+				<fieldset>
+					<label>客户名称</label>
+					<input name="name" type="text" value=""/>
+				</fieldset>
+			<?php }?>
+		<fieldset>
+			<label>产品相册</label>
+			<div class="box">
+				<button class="btn" onclick="addNewSpec();" type="button"><span class="add">+</span></button>
+				<input id="fileUpload" type="file" style="width:70px;" accept="image/png,image/gif,image/jpeg" name="_goodsFile" multiple="multiple" data-url="" />
+			</div>
+			<label class="tip" id="uploadPercent">可以上传多张图片，分辨率3000px以下，大小不得超过</label>
+			<div class="box" id="thumbnails"></div>
+			<!--图片模板-->
+			<script type='text/html' id='picTemplate'>
+			<span class='pic'>
+				<img name="picThumb" onclick="defaultImage(this);" style="margin:5px; opacity:1;width:100px;height:100px" src="" alt="" />
+				<p>
+					<a class='orange' href='javascript:void(0)' onclick="$(this).parents('.pic').insertBefore($(this).parents('.pic').prev());"><img src="static/images/main/arrow_left.png" title="左移动" alt="左移动" /></a>
+					<a class='orange' href='javascript:void(0)' onclick="$(this).parents('.pic').remove();"><img src="static/images/main/sign_cacel.png" title="删除" alt="删除" /></a>
+					<a class='orange' href='javascript:void(0)' onclick="$(this).parents('.pic').insertAfter($(this).parents('.pic').next());"><img src="static/images/main/arrow_right.png" title="右移动" alt="右移动" /></a>
+				</p>
+			</span>
+			</script>
+		</fieldset>
+			
+			
 
-			<fieldset>
-				<label>商品名称</label>
-				<input name="name" type="text" value=""/>
-			</fieldset>
 
-			<fieldset>
-				<label>商品品牌</label>
-				<select name="brand_id">
-					<option value="0">请选择</option>
-					<option value="">vivo</option>
-					<option value="">oopo</option>
-					<option value="">金立</option>
-					<option value="">华为</option>
-					<option value="">小米</option>
-				</select>
-			</fieldset>
+			
 
 
-			<fieldset>
-				<label>颜色</label>
-				<div class="box">
-					<input type="text" name="">
-					<button class="btn" onclick="addNewSpec();" type="button"><span class="add">+</span></button>
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<label>内存</label>
-				<div class="box">
-					<input type="text" name="">
-					<button class="btn" onclick="addNewSpec();" type="button"><span class="add">+</span></button>
-				</div>
-			</fieldset>
+			
 
 
-			<fieldset>
-				<label>商品状态</label>
-				<div class="box">
-					<input type='radio' name='is_del' value='3' checked="checked" />在售
-					<input type='radio' name='is_del' value='2' />停售
-				</div>
-			</fieldset>
-
-			<fieldset>
-				<label>产品相册</label>
-				<div class="box">
-					<button class="btn" onclick="addNewSpec();" type="button"><span class="add">+</span></button>
-					<input id="fileUpload" type="file" style="width:70px;" accept="image/png,image/gif,image/jpeg" name="_goodsFile" multiple="multiple" data-url="" />
-				</div>
-				<label class="tip" id="uploadPercent">可以上传多张图片，分辨率3000px以下，大小不得超过</label>
-				<div class="box" id="thumbnails"></div>
-				<!--图片模板-->
-				<script type='text/html' id='picTemplate'>
-				<span class='pic'>
-					<img name="picThumb" onclick="defaultImage(this);" style="margin:5px; opacity:1;width:100px;height:100px" src="" alt="" />
-					<p>
-						<a class='orange' href='javascript:void(0)' onclick="$(this).parents('.pic').insertBefore($(this).parents('.pic').prev());"><img src="static/images/main/arrow_left.png" title="左移动" alt="左移动" /></a>
-						<a class='orange' href='javascript:void(0)' onclick="$(this).parents('.pic').remove();"><img src="static/images/main/sign_cacel.png" title="删除" alt="删除" /></a>
-						<a class='orange' href='javascript:void(0)' onclick="$(this).parents('.pic').insertAfter($(this).parents('.pic').next());"><img src="static/images/main/arrow_right.png" title="右移动" alt="右移动" /></a>
-					</p>
-				</span>
-				</script>
-			</fieldset>
-
-			<fieldset>
-				<label>商品排序</label>
-				<input name="sort" type="text" pattern="int" value="99" />
-			</fieldset>
+			
 		</div>
 		<!--商品信息 结束-->
 		<footer>
