--- a/application/index/view/index/list.html
+++ b/application/index/view/index/list.html
@@ -4,7 +4,7 @@
 		<ul class="tabs">
 			<li><input type="button" class="alt_btn" onclick="selectAll('id[]');" value="全选" /></li>
 			<li><input type="button" class="alt_btn" onclick="goods_del();" value="删除" /></li>
-			<li><input type="button" class="alt_btn" onclick="window.location.href='{url:/seller/goods_edit}';" value="添加商品" /></li>
+			<li><input type="button" class="alt_btn" onclick="window.location.href='?c={$c}&action=add';" value="添加" /></li>
 		</ul>
 	</header>
 
@@ -21,70 +21,43 @@
 				<col width="80px" />
 			</colgroup>
 			<thead>
-					<th class="header"></th>
-					<th class="header">商品名称</th>
-					<th class="header">品牌</th>
-					<th class="header">销售价（元）</th>
-					<th class="header">库存</th>
-					<th class="header">状态</th>
-					<th class="header">排序</th>
-					<th class="header">操作</th>
+				<?php foreach($thead as $v){?>
+					<th class="header">{$v}</th>
+				<?php }?>
 			</thead>
 
 			<tbody>
-				
+				<?php foreach($data as $v){?>
 				<tr>
 					<td><input name="id[]" type="checkbox" value="" /></td>
-					<td>R11</td>
-					<td>oppo</td>
-					<td>2998</td>
-					<td>4</td>
-					<td class="green">在售</td>
-					<td><input class="tiny" type="text" value="0" onchange="changeSort(1,this);" /></td>
+					<?php if(isset($v['name'])){ echo "<td>".$v['name']."</td>";}?>
+					<?php if(isset($v['model_name'])){ echo "<td>".$v['model_name']."</td>";}?>
+					<?php if(isset($v['brand_name'])){ echo "<td>".$v['brand_name']."</td>";}?>
+					<?php if(isset($v['sell_date'])){ echo "<td>".$v['sell_date']."</td>";}?>
+					<?php if(isset($v['customer_name'])){ echo "<td>".$v['customer_name']."</td>";}?>
+					<?php if(isset($v['mobile_name'])){ echo "<td>".$v['mobile_name']."</td>";}?>
+					<?php if(isset($v['mobile'])){ echo "<td>".$v['mobile']."</td>";}?>
+					<?php if(isset($v['last_buy_time'])){ echo "<td>".$v['last_buy_time']."</td>";}?>
+
+					<?php if(isset($v['integral_amount'])){ echo "<td>".$v['integral_amount']."</td>";}?>
+					<?php if(isset($v['complimentary_name'])){ echo "<td>".$v['complimentary_name']."</td>";}?>
+					<?php if(isset($v['complimentary_price'])){ echo "<td>".$v['complimentary_price']."</td>";}?>
+
+					<?php if(isset($v['color'])){ echo "<td>".$v['color']."</td>";}?>
+					<?php if(isset($v['ram'])){ echo "<td>".$v['ram']."</td>";}?>
+					<?php if(isset($v['purchase_price'])){ echo "<td>".$v['purchase_price']."</td>";}?>
+					<?php if(isset($v['sell_price'])){ echo "<td>".$v['sell_price']."</td>";}?>
+					<?php if(isset($v['store_amount'])){ echo "<td>".$v['store_amount']."</td>";}?>
+
+					<?php if(isset($v['state'])){ echo "<td>".$v['state']."</td>";}?>
+					<?php if(isset($v['source'])){ echo "<td>".$v['source']."</td>";}?>
+					<?php if(isset($v['sort'])){ echo "<td>".$v['sort']."</td>";}?>
 					<td>
 						<a href=""><img src="static/images/main/icn_edit.png" title="编辑" /></a>
 						<a href="javascript:delModel()"><img src="static/images/main/icn_del.png" title="删除" /></a>
 					</td>
 				</tr>
-				<tr>
-					<td><input name="id[]" type="checkbox" value="" /></td>
-					<td>R11</td>
-					<td>oppo</td>
-					<td>2998</td>
-					<td>4</td>
-					<td class="green">在售</td>
-					<td><input class="tiny" type="text" value="0" onchange="changeSort(1,this);" /></td>
-					<td>
-						<a href=""><img src="static/images/main/icn_edit.png" title="编辑" /></a>
-						<a href="javascript:delModel()"><img src="static/images/main/icn_del.png" title="删除" /></a>
-					</td>
-				</tr>
-				<tr>
-					<td><input name="id[]" type="checkbox" value="" /></td>
-					<td>R11</td>
-					<td>oppo</td>
-					<td>2998</td>
-					<td>4</td>
-					<td class="green">在售</td>
-					<td><input class="tiny" type="text" value="0" onchange="changeSort(1,this);" /></td>
-					<td>
-						<a href=""><img src="static/images/main/icn_edit.png" title="编辑" /></a>
-						<a href="javascript:delModel()"><img src="static/images/main/icn_del.png" title="删除" /></a>
-					</td>
-				</tr>
-				<tr>
-					<td><input name="id[]" type="checkbox" value="" /></td>
-					<td>R11</td>
-					<td>oppo</td>
-					<td>2998</td>
-					<td>4</td>
-					<td class="green">在售</td>
-					<td><input class="tiny" type="text" value="0" onchange="changeSort(1,this);" /></td>
-					<td>
-						<a href=""><img src="static/images/main/icn_edit.png" title="编辑" /></a>
-						<a href="javascript:delModel()"><img src="static/images/main/icn_del.png" title="删除" /></a>
-					</td>
-				</tr>
+				<?php }?>
 
 			</tbody>
 		</table>
