js，css路径 添加页返回按钮

--- a/application/index/view/index/add.html
+++ b/application/index/view/index/add.html
@@ -3,7 +3,7 @@
 		<h3 class="tabs_involved">{$add_title}</h3>
 
 		<ul class="tabs" name="menu1">
-			<li id="li_1" class=""><span onclick="window.location.href='?c=brand'"><img src="static/images/main/icn_jump_back.png" title="返回" /></span></li>
+			<li id="li_1" class=""><span onclick="history.go(-1)"><img src="/static/images/main/icn_jump_back.png" title="返回" /></span></li>
 		</ul>
 	</header>
 
