--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -5,13 +5,13 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>商家管理后台</title>
 	<link type="image/x-icon" href="{webroot:favicon.ico}" rel="icon">
-	<script type='text/javascript' src="static/js/jquery-1.12.4.min.js"></script>
-	<script type='text/javascript' src="static/js/form.js"></script>
-	<script type='text/javascript' src="static/js/artTemplate.js"></script>
-	<script type='text/javascript' src="static/js/validate.js"></script>
-	<script type='text/javascript' src="static/js/html5.js"></script>
-	<link rel="stylesheet" href="static/css/admin.css" type="text/css" media="screen" />
-	<script type='text/javascript' src="static/js/public.js"></script>
+	<script type='text/javascript' src="/static/js/jquery-1.12.4.min.js"></script>
+	<script type='text/javascript' src="/static/js/form.js"></script>
+	<script type='text/javascript' src="/static/js/artTemplate.js"></script>
+	<script type='text/javascript' src="/static/js/validate.js"></script>
+	<script type='text/javascript' src="/static/js/html5.js"></script>
+	<link rel="stylesheet" href="/static/css/admin.css" type="text/css" media="screen" />
+	<script type='text/javascript' src="/static/js/public.js"></script>
 </head>
 
 <body>
