--- a/application/login/view/index/index.html
+++ b/application/login/view/index/index.html
@@ -10,7 +10,7 @@
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/static/css/font.css">
-	<link rel="stylesheet" href="/static/css/xadmin.css">
+	  <link rel="stylesheet" href="/static/css/xadmin.css">
     <script type="text/javascript" src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     <script src="/static/lib/layui/layui.js" charset="utf-8"></script>
     <script type="text/javascript" src="/static/js/xadmin.js"></script>
@@ -43,7 +43,7 @@
               form.on('submit(login)', function(data){
                 // alert(888)
                 layer.msg(JSON.stringify(data.field),function(){
-                    location.href='index.html'
+                    location.href='/'
                 });
                 return false;
               });
