后台管理分类栏url erp管理分类栏url erp管理列表页&新增页

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -60,49 +60,24 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="member-list.html">
+                        <a _href="/admin/master/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>管理员列表</cite>
                             
                         </a>
                     </li >
                     <li>
-                        <a _href="member-del.html">
+                        <a _href="/admin/users/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>角色列表</cite>
                             
                         </a>
                     </li>
                     <li>
-                        <a _href="member-del.html">
+                        <a _href="/admin/rules/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>权限管理</cite>
-                            <!-- <i class="iconfont nav_right">&#xe697;</i> -->
                         </a>
-                       <!--  <ul class="sub-menu">
-                            <li>
-                                <a _href="xxx.html">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>会员列表</cite>
-                                    
-                                </a>
-                            </li >
-                            <li>
-                                <a _href="xx.html">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>会员删除</cite>
-                                    
-                                </a>
-                            </li>
-                            <li>
-                                <a _href="xx.html">
-                                    <i class="iconfont">&#xe6a7;</i>
-                                    <cite>等级管理</cite>
-                                    
-                                </a>
-                            </li>
-                            
-                        </ul> -->
                     </li>
                 </ul>
             </li>
@@ -114,25 +89,25 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
-                        <a _href="order-list.html">
+                        <a _href="/erp/models/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>机型列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="order-list.html">
+                        <a _href="/erp/store/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>库存列表</cite>
                         </a>
                     </li >
                     <li>
-                        <a _href="order-list.html">
+                        <a _href="/erp/customer/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>客户列表</cite>
                         </a>
                     </li > 
                     <li>
-                        <a _href="order-list.html">
+                        <a _href="/erp/sell/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>销售列表</cite>
                         </a>
