分类栏新增品牌管理

--- a/application/index/view/index/index.html
+++ b/application/index/view/index/index.html
@@ -89,6 +89,12 @@
                 </a>
                 <ul class="sub-menu">
                     <li>
+                        <a _href="/erp/brand/">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>品牌列表</cite>
+                        </a>
+                    </li >
+                    <li>
                         <a _href="/erp/models/">
                             <i class="iconfont">&#xe6a7;</i>
                             <cite>机型列表</cite>
