--- a/application/login/view/index/index.html
+++ b/application/login/view/index/index.html
@@ -43,7 +43,7 @@
               form.on('submit(login)', function(data){
                 // alert(888)
                 layer.msg(JSON.stringify(data.field),function(){
-                    location.href='/'
+                    location.href='/login/index/login'
                 });
                 return false;
               });
