--- a/application/erp/view/brand/edit.html
+++ b/application/erp/view/brand/edit.html
@@ -24,25 +24,12 @@
     <div class="x-body">
         <form class="layui-form">
           <div class="layui-form-item">
-              <label for="username" class="layui-form-label">
+              <label for="name" class="layui-form-label">
                   <span class="x-red">*</span>品牌
               </label>
               <div class="layui-input-inline">
-                  <select id="brand" name="brand" class="valid">
-                    <option value="0">请选择品牌</option>
-                    {volist name="brand_list" id="vo"}
-                      <option value="{$vo.id}">{$vo.name}</option>
-                    {/volist}
-                  </select>
-              </div>
-          </div>
-          <div class="layui-form-item">
-              <label for="name" class="layui-form-label">
-                  <span class="x-red">*</span>机型
-              </label>
-              <div class="layui-input-inline">
                   <input type="text" id="name" name="name" required="" lay-verify="required"
-                  autocomplete="off" class="layui-input">
+                  autocomplete="off" value="{$info.name}" class="layui-input">
               </div>
           </div>
           <div class="layui-form-item">
@@ -51,29 +38,9 @@
               </label>
               <div class="layui-input-inline">
                   <select id="state" name="state" class="valid">
-                    <option value="1">在售</option>
-                    <option value="0">停产</option>
+                    <option value="1">启用</option>
+                    <option value="0">停用</option>
                   </select>
-              </div>
-          </div>
-          <div class="layui-form-item">
-              <label for="color" class="layui-form-label">
-                  <span class="x-red">*</span>颜色
-              </label>
-              <div class="layui-input-inline">
-                  <input type="text" id="color" name="color" required="" lay-verify="required"
-                  autocomplete="off" class="layui-input">
-                  <span class="x-red">(规格与规格直接用逗号隔开,例:红色,黄色,蓝色)</span>
-              </div>
-          </div>
-          <div class="layui-form-item">
-              <label for="memory" class="layui-form-label">
-                  <span class="x-red">*</span>内存
-              </label>
-              <div class="layui-input-inline">
-                  <input type="text" id="memory" name="memory" required="" lay-verify="required"
-                  autocomplete="off" class="layui-input">
-                  <span class="x-red">(规格与规格直接用逗号隔开,例:256,16,64)</span>
               </div>
           </div>
           <div class="layui-form-item">
@@ -81,8 +48,8 @@
                   <span class="x-red">*</span>排序
               </label>
               <div class="layui-input-inline">
-                  <input type="text" id="sort" name="sort" required="" lay-verify="required"
-                  autocomplete="off" value="99" class="layui-input">
+                  <input type="text" id="sort" name="sort" required="" lay-verify="sort"
+                  autocomplete="off" value="{$info.sort}" class="layui-input">
               </div>
           </div>
           <div class="layui-form-item layui-form-text">
@@ -90,7 +57,7 @@
                   描述
               </label>
               <div class="layui-input-block">
-                  <textarea placeholder="请输入内容" id="desc" name="desc" class="layui-textarea"></textarea>
+                  <textarea placeholder="请输入内容" id="desc" name="desc" class="layui-textarea">{$info.desc}</textarea>
               </div>
           </div>
           <div class="layui-form-item">
@@ -110,23 +77,13 @@
         
           //自定义验证规则
           form.verify({
-            nikename: function(value){
-              if(value.length < 5){
-                return '昵称至少得5个字符啊';
-              }
-            }
-            ,pass: [/(.+){6,12}$/, '密码必须6到12位']
-            ,repass: function(value){
-                if($('#L_pass').val()!=$('#L_repass').val()){
-                    return '两次密码不一致';
-                }
-            }
+            sort: [/^(([0-9]\d?)|100)$/, '排序只能为0-100']
           });
 
           //监听提交
           form.on('submit(add)', function(data){
             console.log(data.field);
-            var url = '/erp/models/addSubmit';
+            var url = '/erp/brand/addSubmit';
             //发异步，把数据提交给php
             $.ajax({
               url: url,
