--- a/application/erp/view/brand/index.html
+++ b/application/erp/view/brand/index.html
@@ -61,21 +61,28 @@
           </tr>
         </thead>
         <tbody>
+          {volist name="list" id="vo"}
           <tr>
             <td>
               <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
             </td>
-            <td>1</td>
-            <td>小明</td>
+            <td>{$vo.id}</td>
+            <td>{$vo.name}</td>
             <td class="td-status">
-              <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span>
+              {switch name="$vo.state" }
+                  {case value="0"}<span class="layui-btn layui-btn-normal layui-btn-disabled">停用</span>{/case}
+                  {case value="1"}<span class="layui-btn layui-btn-normal layui-btn-mini">启用</span>{/case}
+                  {default /}默认情况
+              {/switch}
+              
+              
             </td>
-            <td>99</td>
+            <td>{$vo.sort}</td>
             <td class="td-manage">
               <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
                 <i class="layui-icon">&#xe601;</i>
               </a>
-              <a title="编辑"  onclick="x_admin_show('编辑','member-edit.html',600,400)" href="javascript:;">
+              <a title="编辑"  onclick="x_admin_show('编辑','/erp/brand/edit?id={$vo.id}',600,400)" href="javascript:;">
                 <i class="layui-icon">&#xe642;</i>
               </a>
               <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
@@ -83,28 +90,7 @@
               </a>
             </td>
           </tr>
-          <tr>
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-            </td>
-            <td>1</td>
-            <td>小明</td>
-            <td class="td-status">
-              <span class="layui-btn layui-btn-normal layui-btn-mini layui-btn-disabled">已停用</span>
-            </td>
-            <td>99</td>
-            <td class="td-manage">
-              <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                <i class="layui-icon">&#xe601;</i>
-              </a>
-              <a title="编辑"  onclick="x_admin_show('编辑','member-edit.html',600,400)" href="javascript:;">
-                <i class="layui-icon">&#xe642;</i>
-              </a>
-              <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
-            </td>
-          </tr>
+          {/volist}
         </tbody>
       </table>
       <div class="page">
