下拉菜单增加搜索功能，状态改为单选框

--- a/application/erp/view/brand/add.html
+++ b/application/erp/view/brand/add.html
@@ -37,10 +37,8 @@
                   <span class="x-red">*</span>状态
               </label>
               <div class="layui-input-inline">
-                  <select id="state" name="state" class="valid">
-                    <option value="1">启用</option>
-                    <option value="0">停用</option>
-                  </select>
+                  <input type="radio" name="state" value="1" title="启用" checked>
+                  <input type="radio" name="state" value="0" title="停用">
               </div>
           </div>
           <div class="layui-form-item">
