添加角色 权限  以及判断用户是否启用 停用

--- a/application/admin/view/master/index.html
+++ b/application/admin/view/master/index.html
@@ -42,7 +42,7 @@
       </div>
       <xblock>
         <button class="layui-btn layui-btn-danger" onclick="delAll()"><i class="layui-icon"></i>批量删除</button>
-        <button class="layui-btn" onclick="x_admin_show('添加用户','./admin-add.html')"><i class="layui-icon"></i>添加</button>
+        <button class="layui-btn" onclick="x_admin_show('添加用户','/admin/master/add')"><i class="layui-icon"></i>添加</button>
         <span class="x-right" style="line-height:40px">共有数据：88 条</span>
       </xblock>
       <table class="layui-table">
@@ -52,39 +52,52 @@
               <div class="layui-unselect header layui-form-checkbox" lay-skin="primary"><i class="layui-icon">&#xe605;</i></div>
             </th>
             <th>ID</th>
-            <th>登录名</th>
-            <th>手机</th>
-            <th>邮箱</th>
-            <th>角色</th>
-            <th>加入时间</th>
+            <th>用户角色</th>
+            <th>用户名</th>
+            <th>Email</th>
             <th>状态</th>
+            <th>登录次数</th>
+            <th>登录地点</th>
+            <th>登录IP</th>
+            <th>日期</th>
             <th>操作</th>
         </thead>
         <tbody>
-          <tr>
-            <td>
-              <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
-            </td>
-            <td>1</td>
-            <td>admin</td>
-            <td>18925139194</td>
-            <td>113664000@qq.com</td>
-            <td>超级管理员</td>
-            <td>2017-01-01 11:11:42</td>
-            <td class="td-status">
-              <span class="layui-btn layui-btn-normal layui-btn-mini">已启用</span></td>
-            <td class="td-manage">
-              <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
-                <i class="layui-icon">&#xe601;</i>
-              </a>
-              <a title="编辑"  onclick="x_admin_show('编辑','admin-edit.html')" href="javascript:;">
-                <i class="layui-icon">&#xe642;</i>
-              </a>
-              <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
-                <i class="layui-icon">&#xe640;</i>
-              </a>
-            </td>
-          </tr>
+        {if condition="$volist.total eq 0"}<tr class="tr"><td class="tc" colspan="11">暂无数据，等待添加～！</td></tr>{/if}
+        <!--顶级数据-->
+        {volist name="volist.data" id="vo"}
+        <tr>
+          <td>
+            <div class="layui-unselect layui-form-checkbox" lay-skin="primary" data-id='2'><i class="layui-icon">&#xe605;</i></div>
+          </td>
+        <td class="tc">{$vo.ID}</td>
+        <td class="tc">{$vo.Rolename}</td>
+        <td>{$vo.Username}</td>
+        <td>{$vo.Email}</td>
+        <td class="tc">
+          {if condition="$vo.Status eq 0"}
+          <span class="layui-btn layui-btn-normal layui-btn-disabled">停用</span>
+          {else /}
+          <span class="layui-btn layui-btn-normal layui-btn-mini">启用</span>
+          {/if}
+        </td>
+        <td class="tc">{$vo.Logincount}</td>
+        <td class="tc">{$vo.Loginarea}</td>
+        <td class="tc">{$vo.Loginip}</td>
+        <td class="tc">{$vo.Dtime}</td>
+          <td class="td-manage">
+            <a onclick="member_stop(this,'10001')" href="javascript:;"  title="启用">
+              <i class="layui-icon">&#xe601;</i>
+            </a>
+            <a title="编辑"  onclick="x_admin_show('编辑','admin-edit.html')" href="javascript:;">
+              <i class="layui-icon">&#xe642;</i>
+            </a>
+            <a title="删除" onclick="member_del(this,'要删除的id')" href="javascript:;">
+              <i class="layui-icon">&#xe640;</i>
+            </a>
+          </td>
+        </tr>
+        {/volist}
         </tbody>
       </table>
       <div class="page">
